--- a/forgotPass.html
+++ b/forgotPass.html
@@ -73,7 +73,7 @@
       <button type="submit">Request Reset Link</button>
     </div>
   </form>
-  <a href="pages.html">Go Back to Login</a>
+  <a href="index.html">Go Back to Login</a>
 </div>
 </body>
 </html>
