--- a/signup.html
+++ b/signup.html
@@ -95,7 +95,7 @@
     </div>
   </form>
   <div class="signup-links">
-    <a href="pages.html">Already have an account? Log In</a>
+    <a href="index.html">Already have an account? Log In</a>
   </div>
 </div>
 </body>
